# edex-ui

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  biome.json  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.github/workflows/: main.yml
.husky/: pre-commit
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/constant/: main.rs
src-tauri/src/event/: main.rs
src-tauri/src/file/: main.rs
src-tauri/src/path/: main.rs
src-tauri/src/session/: main.rs
src-tauri/src/sys/: main.rs
src/components/banner/: index.tsx
src/components/dashboard/: index.tsx  rows.tsx  table.tsx
src/components/divider/: index.tsx
src/components/filesystem/: file.tsx  icon.tsx  index.tsx  tile.tsx
src/components/network/: content.tsx  index.tsx
src/components/network/disk/: index.tsx  usage.tsx
src/components/network/status/: base.tsx  index.tsx  latency.tsx
src/components/network/traffic/: index.tsx
src/components/setting/: hidden.tsx  index.tsx  theme.tsx
src/components/system/: content.tsx  index.tsx
src/components/system/clock/: index.tsx
src/components/system/cpuinfo/: index.tsx  load.tsx  temperature.tsx  usage.tsx
src/components/system/hardwareInfo/: cpuLoad.tsx  index.tsx  load.tsx  temperature.tsx
src/components/system/meminfo/: index.tsx
src/components/system/process/: index.tsx  table.tsx
src/components/system/sysinfo/: base.tsx  date.tsx  index.tsx  kernel.tsx  upTime.tsx  version.tsx
src/components/terminal/: index.css  index.tsx  session.tsx  tab.tsx  xTerm.tsx
src/lib/log/: index.ts
src/lib/os/: index.ts
src/lib/queries/: index.ts
src/lib/setting/: index.ts
src/lib/system/: index.tsx
src/lib/terminal/: create.ts  index.ts  provider.tsx
src/lib/themes/: index.tsx  provider.tsx  styles.ts  terminal.ts
src/lib/utils/: format.ts  index.ts  network.tsx
src/models/: index.ts
src/themes/: index.tsx  provider.ts  provider.tsx  terminal.ts
