[package]
name = "edex"
version = "0.0.1"
description = ""
authors = ["zluo01"]
license = ""
repository = "https://github.com/zluo01/edex-ui"
edition = "2021"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.6.2", features = [] }
tauri-plugin-store = "2.3.0"
tauri-plugin-log = { version = "2.6.0" }
tauri-plugin-single-instance = { version = "2.3.0" }
tokio = { version = "1.46.1", features = ["time", "process"] }
log = "0.4.27"
sysinfo = "0.35.2"
portable-pty = "0.9.0"
notify = { version = "8.1.0" }
chrono = "0.4.41"
tauri-plugin-os = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-http = "2.5.0"
