[package]
name = "edex"
version = "0.0.1"
description = ""
authors = ["zluo01"]
license = ""
repository = "https://github.com/zluo01/edex-ui"
edition = "2021"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.4", features = [] }
tauri-plugin-store = "2.4.1"
tauri-plugin-log = { version = "2.7.1" }
tauri-plugin-single-instance = { version = "2.3.6" }
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-http = "2.5.4"
tokio = { version = "1.48.0", features = ["time", "process"] }
log = "0.4.29"
sysinfo = "0.37.0"
portable-pty = "0.9.0"
notify = { version = "8.2.0" }
chrono = "0.4.42"
dashmap = "7.0.0-rc2"
