[package]
name = "edex"
version = "0.0.1"
description = ""
authors = ["zluo01"]
license = ""
repository = "https://github.com/zluo01/edex-ui"
edition = "2021"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-store = "2.4.2"
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-single-instance = { version = "2.3.7" }
tauri-plugin-os = "2.3.2"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.49.0", features = ["time", "process"] }
log = "0.4.29"
sysinfo = "0.38.0"
portable-pty = "0.9.0"
notify = { version = "8.2.0" }
chrono = "0.4.43"
dashmap = "7.0.0-rc2"
nvml-wrapper = "0.11.0"
